created css and js. Started outlining my page in html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/sketch.js"></script>
     <title>Romy Aboudarham</title>
 </head>
 <body>
+    <div class="box">
+        <h1>Romy Aboudarham</h1>
+        <img src="" alt="photo of my pet rock">
+        <p>This is my pet rock. Her name is Jessica.</p>
+    </div>
     
 </body>
 </html>
