finished and added 4 pages

--- a/part-4-altar.html
+++ b/part-4-altar.html
@@ -10,15 +10,17 @@
 </head>
 <body>
     <div id="page" class="page">
-        <div id="jessica-photo"></div>
+        <div id="altar-photo"></div>
         <h1>Jessica the Pet Rock</h1>
         <p>
-            This is my pet rock. Her name is Jessica. I found her in my neighbor's front yard.
-            My neighbor was named was Jessica. So I named my rock, Jessica. That was 17 years ago.
+            Today, Jessica is still with me. She used to rest on my car dashboard, but I took a hard turn once and she 
+            almost went flying through the window. So for her safety and mine, she sits on my altar in my room.
+            <br><br>
+            Idk where Eren is.
         </p>
         <div class="nav-btns">
-            <a href="./part-4-altar.html" class="previous-btn">&#8249;-</a>
-            <a href="./part-2-beanie.html" class="next-btn">-&#8250;</a>
+            <a href="./part-3-Lilah.html" class="previous-btn">&#8249;-</a>
+            <a href="./index.html" class="next-btn">-&#8250;</a>
         </div>
     </div>
     
